Revision history for Bag-Similarity

{{$NEXT}}

0.005  2014-08-07 22:15:54 CEST
       - documentation ipmprovement

0.004  2014-08-07 00:08:23 CEST
       - added Dice, Jaccard, tests

0.003  2014-08-06 22:40:25 CEST
       - cleanup

0.002  2014-08-06 00:12:50 CEST
        - added cosine

0.001  2014-08-05 23:45:03 CEST
        - Initial release