@@ -1,6 +1,7 @@
 Revision history for Bag-Similarity
 
 {{$NEXT}}
+       - remove default method and croak
 
 0.005  2014-08-07 22:15:54 CEST
        - documentation ipmprovement
